force-app/main/default/objects/Portal_Activity__c/Portal_Activity__c.object-meta.xml
<CustomObject>
    <label>Portal Activity</label>
    <nameField>
        <displayFormat>PA-{000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>