force-app/main/default/objects/Portal_Activity__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>