force-app/main/default/objects/Portal_Activity__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>fw1__Invoice__c</referenceTo>
    <relationshipLabel>Portal Activities</relationshipLabel>
    <relationshipName>Portal_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>