force-app/main/default/objects/Portal_Activity__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>fw1__Payment__c</referenceTo>
    <relationshipLabel>Portal Activities</relationshipLabel>
    <relationshipName>Portal_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>