force-app/main/default/objects/Portal_Activity__c/fields/Payment_Profile__c.field-meta.xml
<CustomField>
    <fullName>Payment_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Profile</label>
    <referenceTo>fw1__PaymentProfile__c</referenceTo>
    <relationshipLabel>Portal Activities</relationshipLabel>
    <relationshipName>Portal_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>