force-app/main/default/objects/Portal_Activity__c/fields/Portal_Authentication__c.field-meta.xml
<CustomField>
    <fullName>Portal_Authentication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Authentication</label>
    <referenceTo>Portal_Authentication__c</referenceTo>
    <relationshipLabel>Portal Activities</relationshipLabel>
    <relationshipName>Portal_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>