force-app/main/default/objects/Portal_Activity__c/fields/Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Portal_User__c</fullName>
    <label>Portal User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Portal Activities (Portal User)</relationshipLabel>
    <relationshipName>Portal_Activities1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>