force-app/main/default/objects/Portal_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activity__c</columns>
    <columns>Contact__c</columns>
    <columns>Payment__c</columns>
    <columns>Payment_Profile__c</columns>
    <columns>Portal_Authentication__c</columns>
    <columns>Portal_User__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>